# ExactStrata

./: .gitignore  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml  setup-checkpoint.cfg
Examples/: exactstrata_notebook.ipynb
Examples/.ipynb_checkpoints/: exactstrata_notebook-checkpoint.ipynb
exactstrata/: Helper.py  __init__.py  divtautpolynomial.py  exactboundarystratum.py  exactstrata.py  exactstratum.py  iteratedblowup.py  profile.py
exactstrata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
exactstrata/.ipynb_checkpoints/: __init__-checkpoint.py  divtautpolynomial-checkpoint.py  exactboundarystratum-checkpoint.py  exactstratum-checkpoint.py  helper-checkpoint.py  iteratedblowup-checkpoint.py  profile-checkpoint.py
exactstrata/exactstrata.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: divtautpolynomial.py  iteratedblowup.py  profile.py
